tests/playwright-test/esm.spec.ts-snapshots/example-playwright-test-darwin.txt

Running 1 test using 1 worker

  ✘  [foo] › a.test.ts:7:7 › check project name (6ms)


  1) [foo] › a.test.ts:7:7 › check project name ====================================================

    Error: expect(received).toBe(expected) // Object.is equality

    Expected: 2
    Received: 1

       6 |
       7 |       test('check project name', ({}, testInfo) => {
    >  8 |         expect(1).toBe(2);
         |                   ^
       9 |         expect(testInfo.project.name).toBe('foo');
      10 |       });
      11 |     

        at /Users/rosswollman/code/microsoft/playwright/test-results/esm-should-use-source-maps-w-ESM-playwright-test/a.test.ts:8:19


  1 failed
    [foo] › a.test.ts:7:7 › check project name =====================================================

Error: ENOENT: no such file or directory, open '/Users/rosswollman/code/microsoft/playwright/test-results/esm-should-use-source-maps-w-ESM-playwright-test/test-results/report.json'